<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="input_display">Input and display</string>
    <string name="advanced">Advanced</string>
    <string name="app_name">Dungeon Crawl Stone Soup</string>
    <string name="start_game">Start Game</string>
    <string name="edit_rc">Edit Init File</string>
    <string name="morgue">Morgue Files</string>
    <string name="mods">Mods</string>
    <string name="rc_hint">Enter your custom configuration here.</string>
    <string name="help">Options Guide</string>
    <string name="open_error">Error opening file</string>
    <string name="save">Save</string>
    <string name="save_error">Error saving file</string>
    <string name="discard_changes_title">Discard unsaved changes?</string>
    <string name="discard_changes_message">Your changes have not been saved.</string>
    <string name="keep_editing">Keep editing</string>
    <string name="discard_changes">Discard changes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="sort_by">Sort By</string>
    <string name="download">Download</string>
    <string name="download_ok">Download complete</string>
    <string name="download_error">Download failed</string>
    <string name="upload">Upload</string>
    <string name="upload_confirm">Do you want to overwrite %s?</string>
    <string name="upload_ok">Upload complete</string>
    <string name="upload_error">Upload failed</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm">Do you want to delete %s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_ok">File deleted</string>
    <string name="delete_error">Error deleting file</string>
    <string name="virtual_keyboard">Virtual keyboard</string>
    <string name="extra_keyboard">Extra directional pad</string>
    <string name="keyboard_size">Keyboard size</string>
    <string name="full_screen">Full screen</string>
    <string name="keyboard_explore">Explore</string>
    <string name="keyboard_autofight">Auto-fight</string>
    <string name="keyboard_menu">Game menu</string>
    <string name="keyboard_inventory">Inventory</string>
    <string name="keyboard_pickup">Pick up</string>
    <string name="keyboard_full">Full</string>
    <string name="keyboard_compact">Compact</string>
    <string name="keyboard_rest">Rest</string>
    <string name="keyboard_wait">Wait</string>
    <string name="keyboard_move_up_left">Move up-left</string>
    <string name="keyboard_move_up">Move up</string>
    <string name="keyboard_move_up_right">Move up-right</string>
    <string name="keyboard_move_left">Move left</string>
    <string name="keyboard_move_right">Move right</string>
    <string name="keyboard_move_down_left">Move down-left</string>
    <string name="keyboard_move_down">Move down</string>
    <string name="keyboard_move_down_right">Move down-right</string>
    <string name="mods_hint">Here you can override game data resources.
        Extra fonts need to be enabled in the init file.</string>
    <string name="tv_warning">WARNING\n\nYou need a keyboard, a mouse or a touch screen in order
        to play Crawl.\n\nIf only a mouse or touch screen are available, it is recommended to
        enable the virtual keyboard on the next screen.</string>
    <string-array name="sort_options">
        <item>Name asc.</item>
        <item>Name desc.</item>
        <item>Date asc.</item>
        <item>Date desc.</item>
    </string-array>
    <string-array name="keyboard_options">
        <item>Disabled</item>
        <item>Classic keyboard</item>
        <item>Transparent keyboard</item>
        <item>Android keyboard</item>
        <item>Mobile compact keyboard</item>
    </string-array>
    <string-array name="extra_keyboard_options">
        <item>Disabled</item>
        <item>Top left</item>
        <item>Top right</item>
        <item>Bottom left</item>
        <item>Bottom right</item>
    </string-array>
    <string name="keyboard_previous_category">Previous class</string>
    <string name="keyboard_next_category">Next class</string>
    <string name="keyboard_switch_action">Switch action</string>
    <string name="keyboard_previous_target">Prev target</string>
    <string name="keyboard_next_target">Next target</string>
    <string name="keyboard_self">Self</string>
    <string name="keyboard_always">Always</string>
    <string name="keyboard_upstairs">Upstairs</string>
    <string name="keyboard_downstairs">Downstairs</string>
    <string name="keyboard_portals">Portals</string>
    <string name="keyboard_traps">Traps</string>
    <string name="keyboard_describe">Describe</string>
    <string name="keyboard_cycle_mode">Cycle mode</string>
    <string name="keyboard_help">Help</string>
    <string name="keyboard_switch_list">Switch list</string>
    <string name="keyboard_unarmed">Unarmed</string>
    <string name="keyboard_sort">Sort</string>
    <string name="keyboard_shopping_list">Shopping list</string>
    <string name="keyboard_filter_useless">Filter useless</string>
    <string name="keyboard_more_info">More info</string>
    <string name="keyboard_known_toggle">Known/unknown</string>
    <string name="keyboard_cycle_pane">Next tab</string>
    <string name="keyboard_join">Join</string>
    <string name="keyboard_go_up">Go up</string>
    <string name="keyboard_go_down">Go down</string>
    <string name="keyboard_view_destination">View destination</string>
    <string name="keyboard_open_door">Open</string>
    <string name="keyboard_close_door">Close</string>
    <string name="keyboard_cycle_view">Cycle view</string>
    <string name="keyboard_all_skills">All skills</string>
    <string name="keyboard_set_target">Set target</string>
    <string name="keyboard_clear_target">Clear targets</string>
    <string name="keyboard_default_target">Last target</string>
    <string name="keyboard_waypoints">Waypoints</string>
    <string name="keyboard_altars">Altars</string>
    <string name="keyboard_layers_all">All</string>
    <string name="keyboard_layers_monsters">Monsters</string>
    <string name="keyboard_layers_player">Player</string>
    <string name="keyboard_layers_items">Items</string>
    <string name="keyboard_layers_clouds">Clouds</string>
    <string name="keyboard_all_spells">All spells</string>
    <string name="keyboard_all_abilities">All abilities</string>
    <string name="keyboard_clear_quiver">Clear quiver</string>
    <string name="keyboard_quaff">Quaff</string>
    <string name="keyboard_read">Read</string>
    <string name="keyboard_fire">Fire</string>
    <string name="keyboard_cast">Cast</string>
    <string name="keyboard_ability">Ability</string>
    <string name="keyboard_shout">Shout</string>
    <string name="keyboard_order_attack">Attack</string>
    <string name="keyboard_order_retreat">Retreat</string>
    <string name="keyboard_order_stop">Stop</string>
    <string name="keyboard_order_guard">Guard</string>
    <string name="keyboard_order_follow">Follow</string>
    <string name="keyboard_more">More</string>
    <string name="keyboard_system">System keyboard</string>
    <string name="keyboard_skip_messages">Skip remaining messages</string>
    <string name="keyboard_height_dp">Key height (dp)</string>
    <string name="keyboard_height_range">Allowed: %1$d–%2$d dp. Custom keyboard keys grow to at least 48 dp and to fit the system text size.</string>
    <string name="keyboard_height_applied">Saved key height: %1$d dp.</string>
    <string name="keyboard_size_presets">Key height presets</string>
    <string name="size_small">Small</string>
    <string name="size_standard">Standard</string>
    <string name="size_large">Large</string>
    <string name="keyboard_preview">Main keyboard preview</string>
    <string name="keyboard_preview_height">Actual keyboard: %1$d dp high (%2$d%% of the screen). Preview is scaled to fit.</string>
    <string name="keyboard_preview_unavailable">The selected mode uses the system keyboard or no keyboard. Its size is managed outside these settings.</string>
    <string name="reading_size">Reading text size</string>
    <string name="reading_size_help">Scales lists, descriptions and messages with the system text size. Explicit font sizes in the configuration file take precedence.</string>
    <string name="reading_size_preview">Preview: lists, descriptions and messages</string>
    <string name="map_scale_help">Map zoom changes tile size separately; use the in-game zoom controls.</string>
    <string name="reading_percentage">%1$d%%</string>
</resources>
