<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/keyboard_mobile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <Button
            android:id="@+id/key_mobile_7"
            android:tag="151"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_height"
            android:layout_weight="11"
            android:text="\u2196\ufe0e"
            android:contentDescription="@string/keyboard_move_up_left"
            android:padding="0dp"
            android:theme="@style/ButtonColor3"/>

        <Button
            android:id="@+id/key_mobile_8"
            android:tag="19"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_height"
            android:layout_weight="11"
            android:text="\u2191\ufe0e"
            android:contentDescription="@string/keyboard_move_up"
            android:padding="0dp"
            android:theme="@style/ButtonColor3"/>

        <Button
            android:id="@+id/key_mobile_9"
            android:tag="153"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_height"
            android:layout_weight="11"
            android:text="\u2197\ufe0e"
            android:contentDescription="@string/keyboard_move_up_right"
            android:padding="0dp"
            android:theme="@style/ButtonColor3"/>

        <Button
            android:id="@+id/key_mobile_explore"
            android:tag="43"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_height"
            android:layout_weight="13.5"
            android:text="@string/keyboard_explore"
            android:padding="0dp"
            android:theme="@style/ButtonColor2"/>

        <Button
            android:id="@+id/key_mobile_autofight"
            android:tag="61"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_height"
            android:layout_weight="13.5"
            android:text="@string/keyboard_autofight"
            android:padding="0dp"
            android:theme="@style/ButtonColor2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <Button
            android:id="@+id/key_mobile_4"
            android:tag="21"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_height"
            android:layout_weight="11"
            android:text="\u2190\ufe0e"
            android:contentDescription="@string/keyboard_move_left"
            android:padding="0dp"
            android:theme="@style/ButtonColor3"/>

        <Button
            android:id="@+id/key_mobile_5"
            android:tag="149"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_height"
            android:layout_weight="11"
            android:text="@string/keyboard_rest"
            android:padding="0dp"
            android:theme="@style/ButtonColor3"/>

        <Button
            android:id="@+id/key_mobile_6"
            android:tag="22"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_height"
            android:layout_weight="11"
            android:text="\u2192\ufe0e"
            android:contentDescription="@string/keyboard_move_right"
            android:padding="0dp"
            android:theme="@style/ButtonColor3"/>

        <Button
            android:id="@+id/key_mobile_inventory"
            android:tag="37"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_height"
            android:layout_weight="13.5"
            android:text="@string/keyboard_inventory"
            android:padding="0dp"
            android:theme="@style/ButtonColor2"/>

        <Button
            android:id="@+id/key_mobile_pickup"
            android:tag="35"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_height"
            android:layout_weight="13.5"
            android:text="@string/keyboard_pickup"
            android:padding="0dp"
            android:theme="@style/ButtonColor2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <Button
            android:id="@+id/key_mobile_1"
            android:tag="145"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_height"
            android:layout_weight="11"
            android:text="\u2199\ufe0e"
            android:contentDescription="@string/keyboard_move_down_left"
            android:padding="0dp"
            android:theme="@style/ButtonColor3"/>

        <Button
            android:id="@+id/key_mobile_2"
            android:tag="20"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_height"
            android:layout_weight="11"
            android:text="\u2193\ufe0e"
            android:contentDescription="@string/keyboard_move_down"
            android:padding="0dp"
            android:theme="@style/ButtonColor3"/>

        <Button
            android:id="@+id/key_mobile_3"
            android:tag="147"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_height"
            android:layout_weight="11"
            android:text="\u2198\ufe0e"
            android:contentDescription="@string/keyboard_move_down_right"
            android:padding="0dp"
            android:theme="@style/ButtonColor3"/>

        <Button
            android:id="@+id/key_mobile_menu"
            android:tag="131"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_height"
            android:layout_weight="9"
            android:minWidth="48dp"
            android:text="\u2630"
            android:textSize="18sp"
            android:contentDescription="@string/keyboard_menu"
            android:padding="0dp"
            android:theme="@style/ButtonColor2"/>

        <Button
            android:id="@+id/key_mobile_back"
            android:tag="111"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_height"
            android:layout_weight="9"
            android:minWidth="48dp"
            android:text="\u21a9\ufe0e"
            android:textSize="18sp"
            android:contentDescription="@string/back"
            android:padding="0dp"
            android:theme="@style/ButtonColor2"/>

        <Button
            android:id="@+id/key_mobile_expand"
            android:tag="layout"
            android:layout_width="0dp"
            android:layout_height="@dimen/key_height"
            android:layout_weight="9"
            android:minWidth="48dp"
            android:text="\u2328\ufe0e"
            android:textSize="18sp"
            android:contentDescription="@string/keyboard_full"
            android:padding="0dp"
            android:theme="@style/ButtonColor1"/>

    </LinearLayout>

</LinearLayout>
